tests/fixtures/language/v3/valid/expressions/let-binding.allium
-- allium: 3

entity Account {
    balance: Decimal
}

rule OpenAccount {
    when: Open(initial: Decimal)
    ensures: Account.created(balance: initial)
}

rule TransferOut {
    when: Transfer(from, amount, fee)
    let total = amount + fee
    requires: from.balance >= total
    ensures: from.balance = from.balance - total
}
